fix(App): made container stretch with footer expansion
added fixed container to hold main visualization and moved grid into there
Made main app container
not fixed

BREAKING CHANGE:
The grid is no longer in the app its in another container down

Issues Affected: NEBV-1532

--- a/src/containers/App/styles.scss
+++ b/src/containers/App/styles.scss
@@ -2,13 +2,8 @@
 @import "./transitions.scss";
 
 .App {
-  @include grid((
-    guideWrapper: (x: 0, y: 0, w: 120, h: 84),
-    ViewOne: (x: 0, y: 0, w: 120, h: 84),
-    ViewTwo: (x: 0, y: 0, w: 120, h: 84),
-    ViewThree: (x: 0, y: 0, w: 120, h: 84),
-    Footer: (x: 0, y: 84, w: 120),
-  )) {
+  
+  
 
   $defaultTransition: 1s ease-in-out;
 
@@ -19,6 +14,15 @@
   $fastestStart: 1s cubic-bezier(0, 1, 0, 1);
 
   position: relative;
+  .fixedContainerWithoutFooter{
+    @include grid((
+      guideWrapper: (x: 0, y: 0, w: 120, h: 84),
+      ViewOne: (x: 0, y: 0, w: 120, h: 84),
+      ViewTwo: (x: 0, y: 0, w: 120, h: 84),
+      ViewThree: (x: 0, y: 0, w: 120, h: 84),
+
+  )) 
+  }
 
   .guideWrapper {
     overflow: hidden;
@@ -134,8 +138,6 @@
   .Footer {
     visibility: hidden;
 
-    height: 0;
-    overflow: hidden;
 
     transition: opacity $defaultTransition, height $defaultTransition, visibility 0s 1s;
   }
@@ -218,4 +220,4 @@
     }
   }
 }
-}
+
